Remove unused chouette parameters